MODON MRE BPDEV/force-app/main/default/objects/Relix_Field_Map__mdt/Relix_Field_Map__mdt.object-meta.xml
<CustomObject>
    <description>Which Relix value is written into which Salesforce field when a Relix KYC case passes. Reuses the fields Signzy fills (docs/relix/03 section 3.1). Read by RelixWriteBackService. Only active rows are applied, and only with RELIX_WRITE_IDENTITY on.</description>
    <label>Relix Field Map</label>
    <pluralLabel>Relix Field Maps</pluralLabel>
</CustomObject>