MODON MRE BPDEV/force-app/main/default/objects/Relix_Field_Map__mdt/fields/Json_Path__c.field-meta.xml
<CustomField>
    <fullName>Json_Path__c</fullName>
    <description>Dot path inside the source, e.g. emiratesIdDetail.expiryDate or personalInfo.firstNameEn.</description>
    <label>JSON Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>