MODON MRE BPDEV/force-app/main/default/objects/Relix_Field_Map__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Which Relix read the value comes from: BUYER = GET /cases/{id}/buyer data.buyerDetails; CASE = GET /cases/{id} data; KYB = GET /cases/{id}/kyb data.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUYER</fullName>
            </value>
            <value>
                <fullName>CASE</fullName>
            </value>
            <value>
                <fullName>KYB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>