MODON MRE BPDEV/force-app/main/default/objects/Relix_Field_Map__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>API name of the field written, e.g. EmiratesIDExpiryDate__pc.</description>
    <label>Target Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>