MODON MRE BPDEV/force-app/main/default/objects/Relix_Field_Map__mdt/fields/Transform__c.field-meta.xml
<CustomField>
    <fullName>Transform__c</fullName>
    <description>How the Relix value is converted before writing.</description>
    <label>Transform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEXT</fullName>
            </value>
            <value>
                <fullName>UPPER</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>NUMBER</fullName>
            </value>
            <value>
                <fullName>GENDER</fullName>
            </value>
            <value>
                <fullName>EID_FORMAT</fullName>
            </value>
            <value>
                <fullName>EMIRATE</fullName>
            </value>
            <value>
                <fullName>NATIONALITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>