MODON MRE BPDEV/force-app/main/default/objects/Relix_Field_Map__mdt/fields/Write_Mode__c.field-meta.xml
<CustomField>
    <fullName>Write_Mode__c</fullName>
    <description>ALWAYS = overwrite; IF_BLANK = only when the target is empty; IF_NEWER_DATE = only when the Relix date is later; COMPARE_ONLY = never write, a mismatch sends the case to NEEDS_REVIEW.</description>
    <label>Write Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALWAYS</fullName>
            </value>
            <value>
                <fullName>IF_BLANK</fullName>
            </value>
            <value>
                <fullName>IF_NEWER_DATE</fullName>
            </value>
            <value>
                <fullName>COMPARE_ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>